tests/paczka2/big_fuzzy/27166935.err
Error in line 2: ZbN A125 67,7
Error in line 9: 00W3B S402 20,9
Error in line 24: ZbN S929 41,5
Error in line 27: ZbN S499 41,0
Error in line 37: q1yJZ244C A125 87,81
Error in line 36: 1UWCM54Su02 S929 90,2
Error in line 39: 1UWCM54Su02 S402 54,6
Error in line 42: 1UWCM54Su02 S929 24,7
Error in line 43: 1UWCM54Su02 S499 1,4
Error in line 35: q1yJZ244C S499 13,8
Error in line 57: S499 S929 24,0
Error in line 51: q1yJZ244C A125 249,1
Error in line 58: S499 A125 12,7
Error in line 69: yJT3 S499 23,68
Error in line 60: yqbs S402 74,3
Error in line 73: q1yJZ244C S402 95,2
Error in line 77: q1yJZ244C S499 66,7
Error in line 81: ZbN S929 73,2
Error in line 83: yJT3 S499 69,5
Error in line 88: yJT3 A125 14,7
Error in line 92: yJT3 S499 66,9
Error in line 97: 1UWCM54Su02 S929 93,1
Error in line 102: 00W3B S499 1N6,7
Error in line 105: q1yJZ244C S929 10,3
Error in line 111: 00W3B S402 89,9
Error in line 109: q1yJZ244C S499 48,9
Error in line 114: q1yJZ244C S929 62,0
Error in line 119: q1yJZ244C A125 70,1
Error in line 134: q1yJZ244C S499 27,0
Error in line 133: yqbs S929 86,4
Error in line 139: 1UWCM54Su02 S402 72,2
Error in line 142: 1UWCM54Su02 A125 83,9
Error in line 125: yJT3 S402 42,5
Error in line 145: yJT3 A125 56,9
Error in line 143: 1UWCM54Su02 S499 70,2
Error in line 159: 00W3B S402 14,1
Error in line 154: S499 A125 35,3
Error in line 162: q1yJZ244C S402 120,1
Error in line 167: 00W3B S929 41,6
Error in line 173: ZbN S929 34,0
Error in line 182: ZbN S499 127,1
Error in line 186: 00W3B S402 5,6
Error in line 190: 00W3B S499 21,1
Error in line 192: q1yJZ244C S402 54,6
Error in line 191: S499 S929 12,3
Error in line 195: q1yJZ244C A125 39,1
Error in line 200: yqbs A125 43,1
Error in line 220: q1yJZ244C S499 177,3
Error in line 214: 00W3B A125 19,6
Error in line 235: 1UWCM54Su02 A125 35,45
